crates/buff-lang-codegen-rust/tests/snapshots/regex_codegen__regex_codegen_find_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/regex_codegen.rs
assertion_line: 562
expression: src
---
fn f() {
    let r: regex::Regex = regex::Regex::new("\\d+".to_string())
        .unwrap_or_else(|_| regex::Regex::new("a^").unwrap());
    r.find("abc123".to_string()).map(|m| m.as_str().to_string());
}
